<resources>
    <string name="app_name">geoApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- basemap menu items -->
    <string name="StreetMapMenu">Streets</string>
    <string name="TopoMenu">Topographic</string>
    <string name="GrayMenu">Gray</string>
    <string name="OceanMenu">Oceans</string>

    <!--
    Strings related to login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username </string>
    <string name="RegistrateSignIn">register or sign in</string>
    -->

    <string name="reportProblem">Report a problem</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="back2">Back</string>
    <string name="backproblem">Back</string>
    <string name="backsettings">Back</string>
    <string name="report">Report</string>
    <string name="help1">In this application you can report any problem you see that has anything with the streats to do</string>
    <string name="help2">By clicking on the Report a problem at the home screen you can easily write what you want to report and then click on the Report
        button to send the problem to us</string>
</resources>
