<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/World_Street_Map"
            android:showAsAction="never"
            android:title="@string/StreetMapMenu"
            tools:ignore="AppCompatResource" />
        <item
            android:id="@+id/World_Topo"
            android:showAsAction="never"
            android:title="@string/TopoMenu"
            tools:ignore="AppCompatResource" />
        <item
            android:id="@+id/Gray"
            android:showAsAction="never"
            android:title="@string/GrayMenu"
            tools:ignore="AppCompatResource" />
        <item
            android:id="@+id/Ocean_Basemap"
            android:showAsAction="never"
            android:title="@string/OceanMenu"
            tools:ignore="AppCompatResource" />
    </group>

</menu>